# Convertidor

./: .gitignore  25-08-26 MONTAÑA MIRANDA ELKIN.txt  Convertidor.py  ConvertirPDFaExcel_Debug.spec  ConvertirPDFaExcel_Final.spec  ConvertirPDFaExcel_v2.spec  DataCredito_COMPLETO_20250930_170831.xlsx  Ejecutar_Convertidor.bat  INSTRUCCIONES_EJECUTABLES.md  PROJECT_CONFIG.ini  README.md  SOLUCION_NUMPY.md  convertidor_portable.spec  convertidor_total.py  diagnostico_completo.py  excel_processor_simple.py  excel_processor_total.py  extractor_diagnostico.py  extractor_independiente.py  extractor_total.py  extraer_datos_pdfs.py  prueba_extraccion.xlsx  prueba_rapida.py  pyrightconfig.json  requirements.txt  setup_paths.py
config/: pyproject.toml  pyrightconfig.json
docs/: ERRORES_SOLUCIONADOS.md  IMPLEMENTACION_COMPLETADA.md  INSTRUCCIONES_EJECUTABLES.md  ORGANIZACION_COMPLETADA.md  README_MODULAR.md  REESTRUCTURACION_PLAN.md  RESOLUCION_ERRORES.md
legacy/: ConvertidorLite_backup.py  Convertidor_legacy_backup.py  Convertidor_v2.0_backup.py
scripts/: analyze_pdfs.py  configure_workspace.py  demo_modular.py  process_user_files.py  setup_paths.py  test_modular.py
src/: __init__.py
src/config/: __init__.py  field_mappings.py
src/extractors/: __init__.py  base_extractor.py  extractor_completo.py  extractor_mejorado.py  info_basica.py
src/learning/: __init__.py  pdf_memory.py
src/processors/: __init__.py  excel_processor.py  excel_processor_completo.py
src/ui/: processing_manager.py
src/utils/: __init__.py  pdf_reader.py
(+3 files in other folders)
